[package]

name = "chip8_ui"
description = "Graphical user interface for the CHIP-8 VM, made with Piston"
readme = "README.md"
license = "MIT"
keywords = ["chip-8", "piston"]
homepage = "https://github.com/chip8-rust/chip8-rust"
repository = "https://github.com/chip8-rust/chip8-rust.git"
version = "0.0.1"
authors = [
    "Jake Kerr <kodafox@gmail.com>",
    "robo9k <robo@9k.lv>",
]

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/pistondevelopers/sdl2_window"

[dependencies.pistoncore-event]
git = "https://github.com/pistondevelopers/event"

[dependencies.piston2d-graphics]
git = "https://github.com/pistondevelopers/graphics"

[dependencies.piston2d-opengl_graphics]
git = "https://github.com/pistondevelopers/opengl_graphics"

[dependencies.shader_version]
git = "https://github.com/pistondevelopers/shader_version"

[dependencies.pistoncore-input]
git = "https://github.com/pistondevelopers/input"

[dependencies.pistoncore-window]
git = "https://github.com/pistondevelopers/window"

[dependencies.quack]
git = "https://github.com/pistondevelopers/quack"

[dependencies]
chip8_vm = "0.*"
