[package]

name = "chip8_ui"
description = "Graphical user interface for the CHIP-8 VM, made with Piston"
readme = "README.md"
license = "MIT"
keywords = ["chip-8", "piston"]
homepage = "https://github.com/chip8-rust/chip8-ui"
repository = "https://github.com/chip8-rust/chip8-ui.git"
version = "0.0.1"
authors = [
    "Jake Kerr <kodafox@gmail.com>",
    "robo9k <robo@9k.lv>",
]

[dependencies]
chip8_vm = "0.4.0"
log = "0.3.5"
env_logger = "0.3.2"
docopt = "0.6.78"
rustc-serialize = "0.3.18"
piston = "0.17.0"
piston2d-opengl_graphics = "0.23.0"
piston2d-graphics = "0.13.0"
pistoncore-sdl2_window = "0.24.0"
piston_window = "0.35.0"
